--- a/pom.xml
+++ b/pom.xml
@@ -141,15 +141,16 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.9.0</version> <!-- Use a compatible version -->
+            <version>3.9.0</version>
             <configuration>
-                <source>17</source> <!-- Set the Java source version compatible with your code -->
-                <target>17</target> <!-- Set the target Java version compatible with your code -->
+                <source>1.8</source> <!-- Set the Java source version compatible with your code -->
+                <target>1.8</target> <!-- Set the target Java version compatible with your code -->
             </configuration>
         </plugin>
         <!-- Other plugins -->
     </plugins>
 </build>
+
 
 
 </project>
