--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
 spring.security.oauth2.client.registration.github.client-id=de433421b38811eaf5b2
 spring.security.oauth2.client.registration.github.client-secret= e0f798082290060169997e9566f60a82f90ab0c9
-server.port=8080
+server.port=${PORT}
+
