--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.security.oauth2.client.registration.github.client-id=de433421b38811eaf5b2
 spring.security.oauth2.client.registration.github.client-secret= e0f798082290060169997e9566f60a82f90ab0c9
 server.port=${PORT}
 
+web: java $JAVA_OPTS -jar target/demo-0.0.1-SNAPSHOT.jar --server.port=$PORT $JAR_OPTS
